chore: reduce unnecessary cloning usage